--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,13 @@
 @import 'index';
 
+.svg-icon {
+    padding-left: 10px;
+    padding-right: 3px;
+    position: relative;
+    top: 3px;
+    font-size: 1rem !important;
+}
+
 // .App {
     // text-align: center;
 // }
