--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,22 @@
     color: #ff7c7c;
 }
 
+.main-h3 {
+    font-size: 1.5rem;
+    margin-bottom: 0px;
+    color: #0a1929;
+}
+
+.main-h6 {
+    margin-top: 10px;
+    margin-bottom: 14px;
+}
+
+.main-span {
+    font-size: .9rem;
+    color: #3e5060;
+}
+
 @media only screen and (max-width: 400px) {
     .main {
         margin-top: 18%;
