--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,17 @@
     top: 3px;
     font-size: 1rem !important;
 }
+body::-webkit-scrollbar {
+    width: 5px;               /* width of the entire scrollbar */
+}
+body::-webkit-scrollbar-track {
+    background: rgb(255, 255, 255);        /* color of the tracking area */
+}
+body::-webkit-scrollbar-thumb {
+    background-color: #3e5060;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 1px solid #3e5060;  /* creates padding around scroll thumb */
+}
 
 // .App {
     // text-align: center;
