--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -3,7 +3,86 @@
 
 .login {
     // margin-top: 6%;
-    margin-bottom: 4%;
-    cursor: default;
-    user-select: none;
+    // margin-bottom: 4%;
+    // cursor: default;
+    // user-select: none;
+    
 }
+
+.login-window {
+    /* From https://css.glass */
+    // background: rgba(255, 255, 255, 0.27);
+    // border-radius: 16px;
+    // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    // backdrop-filter: blur(6.9px);
+    // -webkit-backdrop-filter: blur(6.9px);
+
+    width: 20%;
+    height: auto;
+	// box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);	
+	// border-radius: 20px;
+	// background-color: rgba(255, 255, 255, .15); //need to add
+	
+	// backdrop-filter: blur(5px); //need to add
+
+    // background-color: white;
+    // border-radius: 30px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 8%;
+    padding-right: 8%;
+    // width: 70%;
+    // height: auto;
+    // opacity: 0.;
+    position: relative;
+    top: 12vh;
+    margin: auto;
+}
+
+.login-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.stack-style {
+    margin-top: 5%;
+}
+
+.login-icon-palette {
+    padding-top: 3%;
+}
+
+.login-icon {
+    padding-left: 6.5px;
+    padding-right: 6.5px;
+    position: relative;
+    cursor: pointer;
+    top: 3px;
+    font-size: 2.3rem !important;
+}
+
+// .login-icon:hover {
+//     color: #1976d2;
+// }
+
+.google:hover {
+    color: red;
+}
+.facebook:hover {
+    color: blue;
+}
+.reddit:hover {
+    color: orange;
+}
+.linkedin:hover {
+    color: blueviolet;
+}
+.whatsapp:hover {
+    color: greenyellow;
+}
+.github:hover {
+    color: black;
+}
+
