--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,15 @@ body::-webkit-scrollbar-thumb {
     border: 1px solid #3e5060;  /* creates padding around scroll thumb */
 }
 
+.footer-paper {
+    position: fixed;
+    bottom: -4px;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, .15); //need to add
+	backdrop-filter: blur(15px); //need to add
+}
+
 // .App {
     // text-align: center;
 // }
