Answer_Page_UI_13-08-2022
Answer page ui,
User page ui,
Add question page ui,
left menu ui with filter and logout menu,
Forgot password page ui

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,17 @@ body::-webkit-scrollbar-thumb {
     z-index: 9999;
 }
 
+.body-grid {
+    padding-left: 9% !important;
+    padding-right: 5%;
+    padding-bottom: 2%;
+    padding-top: 6% !important;
+}
+
+.filter-field {
+    margin-bottom: 4% !important;
+}
+
 // .App {
     // text-align: center;
 // }
