--- a/src/sass/user.scss
+++ b/src/sass/user.scss
@@ -2,7 +2,7 @@
 @import '../App.scss';
 
 .user {
-    margin-top: 2%;
+    // margin-top: 2%;
     display: block;
     align-content: center;
     justify-content: center;
