--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,18 +6,22 @@ $medium: 900px;
 
 .ilqna-main {
     position: relative;
-    top: 12px;
-    margin-bottom: 4%;
+    top: 66px;
+    margin-bottom: 10%;
+    @media screen and (max-width: $small) {
+        margin-bottom: 50%;
+    }
     padding-left: 2%;
     padding-right: 2%;
     cursor: default;
     user-select: none;
+    
 }
 
 .nav-link {
-    padding-inline: 2%;
+    padding-inline: 0%;
     @media screen and (max-width: $small) {
-        padding-inline: 1%;
+        padding-inline: 0%;
     }
     @media screen and (min-width: $medium) {
     //do Smth
