--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,11 @@ body {
   background-color: #f9f9f9;  //#f1f3f4;
 }
 
+a {
+  color: #1976d2;
+  text-decoration: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
