--- a/src/sass/user.scss
+++ b/src/sass/user.scss
@@ -2,7 +2,7 @@
 @import '../App.scss';
 
 .user {
-    // margin-top: 2%;
+    margin-top: 2%;
     display: block;
     align-content: center;
     justify-content: center;
@@ -22,9 +22,9 @@
 }
 
 .avatar-img {
-    width: 200px !important;
-    height: 200px !important;
-    font-size: 8rem !important;
+    width: 150px !important;
+    height: 150px !important;
+    font-size: 6rem !important;
 }
 
 .user-title {
@@ -75,6 +75,14 @@
     font-weight: 700 !important;
     padding-bottom: 0% !important;
     text-align: center;
+    line-height: 1 !important;
+}
+
+.caption-text {
+    text-align: center;
+    font-size: 1rem !important;
+    line-height: 1 !important;
+    padding-bottom: 0% !important;
 }
 
 .ask-section-text {
