--- a/src/sass/user.scss
+++ b/src/sass/user.scss
@@ -21,6 +21,11 @@
     height: auto;
 }
 
+.user-image .MuiBadge-badge {
+    width: 20px !important;
+    height: 20px !important;
+}
+
 .avatar-img {
     // width: 150px !important;
     // height: 150px !important;
