F_Add_Question_Filter_17-12-2022
Add question form modification,
Filter form modification,
Integrated category and language APIs

--- a/src/sass/add-question.scss
+++ b/src/sass/add-question.scss
@@ -2,16 +2,14 @@
 @import '../App.scss';
 
 .add-question {
-    // margin-top: 6%;
-    margin-bottom: 4%;
-    cursor: default;
-    user-select: none;
-}
 
-.btn-ask {
-    display: inline-flex;
 }
+.input-control {
+    margin-top: 1rem !important;
+}
+.input-autocomplete {
 
-.rdw-dropdown-carettoopen {
-    width:fit-content !important;
+}
+.input-control-btn {
+
 }
