--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -37,6 +37,7 @@ $medium: 900px;
     text-align: center;
     background-color: #1976d2;
     color: #FFFFFF;
+    font-size: 1.9rem !important;
 }
 
 .drawer-content {
