--- a/src/App.scss
+++ b/src/App.scss
@@ -7,74 +7,31 @@
     top: 3px;
     font-size: 1rem !important;
 }
-body::-webkit-scrollbar {
-    width: 5px;               /* width of the entire scrollbar */
-}
-body::-webkit-scrollbar-track {
-    background: rgb(255, 255, 255);        /* color of the tracking area */
-}
-body::-webkit-scrollbar-thumb {
-    background-color: #3e5060;    /* color of the scroll thumb */
-    border-radius: 20px;       /* roundness of the scroll thumb */
-    border: 1px solid #3e5060;  /* creates padding around scroll thumb */
-}
 
-.footer-paper {
-    position: fixed;
-    bottom: -4px;
-    left: 0;
-    right: 0;
-    background-color: rgba(255, 255, 255, .15); //need to add
-	backdrop-filter: blur(15px); //need to add
-    z-index: 999;
+.nav-link {
+    padding-inline: 0%;
+    @media screen and (max-width: $small) {
+        padding-inline: 0%;
+    }
+    @media screen and (min-width: $medium) {
+    //do Smth
+    }
 }
 
-.body-grid {
-    padding-left: 9% !important;
-    padding-right: 5%;
-    padding-bottom: 2%;
-    padding-top: 6% !important;
+.h-scroller {
+    background-color: #333;
+    overflow: auto;
+    // white-space: nowrap;
+}
+  
+.h-scroller {
+    display: inline-flex;
+    color: white;
+    text-align: center;
+    // padding: 14px;
+    // text-decoration: none;
 }
 
-.filter-field {
-    margin-bottom: 4% !important;
-}
 
-// .App {
-    // text-align: center;
-// }
 
-// .App-logo {
-//   height: 40vmin;
-//   pointer-events: none;
-// }
 
-// @media (prefers-reduced-motion: no-preference) {
-//   .App-logo {
-//     animation: App-logo-spin infinite 20s linear;
-//   }
-// }
-
-// .App-header {
-//   background-color: $secondaryColor;
-//   min-height: 100vh;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   font-size: calc(10px + 2vmin);
-//   color: white;
-// }
-
-// .App-link {
-//   color: $linkColor;
-// }
-
-// @keyframes App-logo-spin {
-//   from {
-//     transform: rotate(0deg);
-//   }
-//   to {
-//     transform: rotate(360deg);
-//   }
-// }
