--- a/src/index.scss
+++ b/src/index.scss
@@ -7,16 +7,29 @@ $primaryHeadingColor: "#0a1929";
 $secondaryHeadingColor: "#1a2027";
 $primaryShadow: "0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%)";
 $small: 400px;
+$medium: 900px;
 
 body {
-  zoom: 80%;
+  // zoom: 80%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f9f9f9;  //#f1f3f4;
+}
+
+body::-webkit-scrollbar {
+  width: 5px;               /* width of the entire scrollbar */
+}
+body::-webkit-scrollbar-track {
+  background: rgb(255, 255, 255);        /* color of the tracking area */
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #3e5060;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 1px solid #3e5060;  /* creates padding around scroll thumb */
 }
 
 a {
@@ -26,5 +39,18 @@ a {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    monospace !important;
+}
+
+.ilqna-main {
+    position: relative;
+    top: 66px;
+    margin-bottom: 10%;
+    @media screen and (max-width: $small) {
+        margin-bottom: 50%;
+    }
+    padding-left: 2%;
+    padding-right: 2%;
+    cursor: default;
+    user-select: none;
 }
