Question_Answer_Count_APIs
Question Count APIs,
Answer Count APIs.
About Popup,
Side Bar Menu UI Changes,
User Page UI Changes.

--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -30,6 +30,11 @@ $medium: 900px;
     cursor: pointer;
 }
 
+.drawer-option-footer {
+    position: relative;
+    bottom: 0;
+}
+
 .drawer-title {
     width: 250px;
     margin: 0%;
