--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,38 @@
     // text-decoration: none;
 }
 
+.custom-loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transform: -webkit-translate(-50%, -50%);
+    transform: -moz-translate(-50%, -50%);
+    transform: -ms-translate(-50%, -50%);
+    z-index: 9999;
+}
+
+.bg-success {
+    background-color: #0fe10f !important;
+    color: white !important;
+}
+
+.bg-error {
+    background-color: #ff7c7c !important;
+    color: white !important;
+}
+
+.bg-primary {
+    background-color: #1976d2 !important;
+    color: white !important;
+}
+
+.icon-color {
+    color: white !important;
+}
+
+
+
 
 
 
