--- a/src/sass/add-question.scss
+++ b/src/sass/add-question.scss
@@ -1,15 +1,23 @@
 @import '../index.scss';
 @import '../App.scss';
 
-.add-question {
-
-}
 .input-control {
     margin-top: 1rem !important;
 }
-.input-autocomplete {
 
+.full-neat-editor {
+    margin-top: 1rem !important;
+    box-shadow: none !important;
+    border: 1px solid #bfbfbf !important;
+    border-radius: 4px !important;
 }
-.input-control-btn {
+.full-neat-editor:hover {
+    border: 1px solid rgba(0, 0, 0, 0.87) !important;
+}
+.full-neat-editor:focus-within{
+    outline: #1976d2 auto 1px !important;
+}
 
+.neat-editor {
+    color: currentColor !important;
 }
