--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ $small: 400px;
 $medium: 900px;
 
 body {
-  // zoom: 80%;
+  zoom: 80%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
