--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -27,6 +27,7 @@
     margin-bottom: 0px;
     color: #0a1929;
     cursor: pointer;
+    font-weight: 500;
     text-overflow: ellipsis;
 }
 
@@ -40,12 +41,29 @@
     color: #3e5060;
 }
 
-.qna-chip {
+.home-chip {
     font-weight: 500;
     float: right;
-    font-size: 0.5rem !important;
+    padding: 0px !important;
+    border-radius: 100px !important;
     margin-right: 2px;
 }
+
+.regular-chip {
+    font-weight: 500;
+    padding: 0px !important;
+    border-radius: 100px !important;
+    margin-right: 2px;
+}
+
+.home-chip > span {
+    font-size: 0.7rem !important;
+}
+
+.regular-chip > span {
+    font-size: 0.7rem !important;
+}
+
 
 // .bg-success {
 //     background-color: #0fe10f;
