QNA page and API integrations
QNA page and API integrations

--- a/src/App.scss
+++ b/src/App.scss
@@ -70,7 +70,13 @@
     color: white !important;
 }
 
-
+.app-navigation {
+    position: sticky !important;
+    bottom: 0px;
+    background-color: #f9f9f9 !important;
+    align-items: center;
+    color: #1976d2 !important;
+}
 
 
 
