--- a/src/sass/qna.scss
+++ b/src/sass/qna.scss
@@ -135,6 +135,20 @@
     font-size: 0.9rem !important;
 }
 
+.answer-place {
+    // border: 1px solid lightgreen;
+    max-width: 100%;
+}
+
+// .if-not-login {
+//     position: relative;
+//     background-color: white;
+//     top: inherit;
+//     height: 82vh;
+//     z-index: 99999;
+//     opacity: 0.3;
+// }
+
 
 
 @media only screen and (max-width: 400px) {
