--- a/src/App.scss
+++ b/src/App.scss
@@ -78,6 +78,9 @@
     color: #1976d2 !important;
 }
 
-
+.filter-dialog > .MuiDialog-container > .MuiPaper-root {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
 
 
