--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@ $secondaryHeadingColor: "#1a2027";
 $primaryShadow: "0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%)";
 $small: 400px;
 $medium: 900px;
+$errorColor: #ff4646;
 
 body {
   zoom: 80%;
