Rating, Bookmark, and UIs
Rating, Bookmark, and UIs

--- a/src/sass/qna.scss
+++ b/src/sass/qna.scss
@@ -140,6 +140,10 @@
     max-width: 100%;
 }
 
+.bookmarked {
+    color: #FFD700;
+}
+
 // .if-not-login {
 //     position: relative;
 //     background-color: white;
