--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -109,6 +109,14 @@
     font-size: 0.7rem !important;
 }
 
+.notify-question {
+    color: #006cd8;
+    cursor: pointer;
+}
+
+.bookmarked {
+    color: #FFD700;
+}
 
 // .bg-success {
 //     background-color: #0fe10f;
